# ChangeLog for vmware overlay
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
# $ Id: $

  18 Jul 2007; Mike Auty <ikelos@gentoo.org>
  Redigested a lot of the overlay ebuilds, something funny digest-wise has been going on recently...

  13 Jul 2007; Chris Gianelloni <wolf31o2@gentoo.org>
  app-emulation/vmware-workstation-tools/vmware-workstation-tools-4.5.3-r1.e
  build:
  Added another mirror.

  13 Jul 2007; Chris Gianelloni <wolf31o2@gentoo.org>
  app-emulation/vmware-workstation/vmware-workstation-6.0.0.45731.ebuild:
  Added another mirror.

  13 Jul 2007; Chris Gianelloni <wolf31o2@gentoo.org>
  app-emulation/vmware-server/vmware-server-1.0.3.44356.ebuild:
  Added another mirror.

  13 Jul 2007; Chris Gianelloni <wolf31o2@gentoo.org>
  app-emulation/vmware-player/vmware-player-2.0.0.45731.ebuild:
  Added another mirror.

  13 Jul 2007; Chris Gianelloni <wolf31o2@gentoo.org>
  -app-emulation/vmware-esx-tools/vmware-esx-tools-3.0.1.ebuild,
  -app-emulation/vmware-esx-tools/files/vmware-esx-tools:
  Removing older version of the vmware-esx-tools ebuild.

  11 Jul 2007; Mike Auty <ikelos@gentoo.org>:
  Bump to vmware-any-any-update110.
  Add patch for 2.6.22 to 1.0.0.16 (110 should take care of <1.0.0.16).
  Revert bash changes, to allow vmware to start with baselayout-2/dash.
  Try to fix up vmware-workstation-tools for version 6.

  08 Jul 2007; Mike Auty <ikelos@gentoo.org>:
  Attempt to get vmware-any-any-update fetched from the gentoo mirrors, even with fetch restrictions.
  Also ensure fetch restrictions message is correct.

  21 Jun 2007; Mike Auty <ikelos@gentoo.org>:
  Added fetch restrictions to workstation-6.
  Change the icon installation also.
  
  20 Jun 2007; Mike Auty <ikelos@gentoo.org>:
  Removed old expired vmware-workstations.
  Added new vmware-workstation ebuild.

  26 May 2007; Mike Auty <ikelos@gentoo.org>:
  Update vmware-modules-1.0.0.16 and for the new vmware-player-2.0 which was also added.