@@ -1,3 +1,3 @@
-MD5 6a0c8da95b4c25670c842939e5b92728 vmware-any-any-update110.tar.gz 328695
-RMD160 eb2e8adc6a7993e2faa6f239e090c0586079fbe7 vmware-any-any-update110.tar.gz 328695
-SHA256 794bf95266e218afad045edfb82deeefaa6338942e6da961e3f23457ecfdcd5a vmware-any-any-update110.tar.gz 328695
+MD5 c407b0f4e4ebb2e73cfd3dcfb921b318 vmware-any-any-update111.tar.gz 331922
+RMD160 5741d4bd5dbde335d7457dec16104a563089fc7e vmware-any-any-update111.tar.gz 331922
+SHA256 b810cf65d9cb11271e621b9eb3fefd9a01fdeca5e6063c9ffd50fb980fc3c8e2 vmware-any-any-update111.tar.gz 331922
